--- a/index.html
+++ b/index.html
@@ -377,10 +377,10 @@
         <button id="resetCustomerSign">Reset Signature</button> <!-- Reset button -->
         <button id="resetOfficerSign">Reset Signature</button> 
     </div>
-<!--<script src="html2pdf.bundle.min.js"> </script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.8.0/html2pdf.bundle.min.js"></script>
-<!--script src="jspdf.umd.min.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="html2pdf.bundle.min.js"> </script>
+    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.8.0/html2pdf.bundle.min.js"></script>-->
+<script src="jspdf.umd.min.js"></script>
+<!--script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>-->
 <script src="app.js"></script>    
 </body>
 </html>
